--- a/404.html
+++ b/404.html
@@ -8,11 +8,16 @@
   <link rel="stylesheet" href="css/style.css">
   
 </head>
-<body class="error-page">
+
+<main>
+    <body class="error-page">
   <div class="error-container">
     <h1>404</h1>
     <p>Oops! The page you're looking for isn't here.</p>
     <a href="index.html">Go Back to Home</a>
   </div>
 </body>
+
+</main>
+
 </html>
