--- a/404.html
+++ b/404.html
@@ -4,21 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 Page Not Found</title>
- <link rel="stylesheet" href="css/html5reset.css">
+  <link rel="stylesheet" href="css/html5reset.css">
   <link rel="stylesheet" href="css/style.css">
-  
 </head>
 
-
 <body class="error-page">
-
-<main>
-  <div class="error-container">
+  <main role="main">
     <h1>404</h1>
     <p>Oops! The page you're looking for isn't here.</p>
     <a href="index.html">Go Back to Home</a>
-  </div>
-
-</main>
+  </main>
 </body>
 </html>
