--- a/404.html
+++ b/404.html
@@ -10,9 +10,11 @@
 
 <body class="error-page">
   <main role="main">
-    <h1>404</h1>
-    <p>Oops! The page you're looking for isn't here.</p>
-    <a href="index.html">Go Back to Home</a>
+    <div class="error-container">
+      <h1>404</h1>
+      <p>Oops! The page you're looking for isn't here.</p>
+      <a href="index.html">Go Back to Home</a>
+    </div>
   </main>
 </body>
 </html>
