--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="error-page">
-  <main role="main">
+  <main>
     <div class="error-container">
       <h1>404</h1>
       <p>Oops! The page you're looking for isn't here.</p>
