--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
 
     <div class="popup-buttons">
-      <a href="https://si-umich.12twenty.com/Login" class="popup-btn btn-yes">Yes, Schedule Meeting</a>
+      <a href="https://si-umich.12twenty.com/Login" class="popup-btn btn-yes" target="_blank">Yes, Schedule Meeting</a>
       <button class="popup-btn btn-no">No, Keep Scrolling</button>
     </div>
   </div>
